crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_errors__parse_deeply_nested_functions.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_errors.rs
expression: program
---
items:
  - Function:
      name:
        name: level1
        span:
          start: 12
          end: 18
          file: "<input>"
      type_params: []
      params: []
      return_type:
        Named:
          - number
          - start: 24
            end: 30
            file: "<input>"
      return_ownership: ~
      predicate: ~
      body:
        statements:
          - FunctionDecl:
              name:
                name: level2
                span:
                  start: 48
                  end: 54
                  file: "<input>"
              type_params: []
              params: []
              return_type:
                Named:
                  - number
                  - start: 60
                    end: 66
                    file: "<input>"
              return_ownership: ~
              predicate: ~
              body:
                statements:
                  - FunctionDecl:
                      name:
                        name: level3
                        span:
                          start: 88
                          end: 94
                          file: "<input>"
                      type_params: []
                      params: []
                      return_type:
                        Named:
                          - number
                          - start: 100
                            end: 106
                            file: "<input>"
                      return_ownership: ~
                      predicate: ~
                      body:
                        statements:
                          - Return:
                              value:
                                Literal:
                                  - Number: 42
                                  - start: 136
                                    end: 138
                                    file: "<input>"
                              span:
                                start: 129
                                end: 139
                                file: "<input>"
                        tail_expr: ~
                        span:
                          start: 107
                          end: 157
                          file: "<input>"
                      span:
                        start: 85
                        end: 157
                        file: "<input>"
                  - Return:
                      value:
                        Call:
                          callee:
                            Identifier:
                              name: level3
                              span:
                                start: 181
                                end: 187
                                file: "<input>"
                          args: []
                          span:
                            start: 181
                            end: 189
                            file: "<input>"
                      span:
                        start: 174
                        end: 190
                        file: "<input>"
                tail_expr: ~
                span:
                  start: 67
                  end: 204
                  file: "<input>"
              span:
                start: 45
                end: 204
                file: "<input>"
          - Return:
              value:
                Call:
                  callee:
                    Identifier:
                      name: level2
                      span:
                        start: 224
                        end: 230
                        file: "<input>"
                  args: []
                  span:
                    start: 224
                    end: 232
                    file: "<input>"
              span:
                start: 217
                end: 233
                file: "<input>"
        tail_expr: ~
        span:
          start: 31
          end: 243
          file: "<input>"
      span:
        start: 9
        end: 243
        file: "<input>"
