crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_errors__parse_nested_function_in_for_block.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_errors.rs
expression: program
---
items:
  - Function:
      name:
        name: outer
        span:
          start: 12
          end: 17
      type_params: []
      params: []
      return_type:
        Named:
          - void
          - start: 23
            end: 27
      return_ownership: ~
      predicate: ~
      body:
        statements:
          - ForIn:
              variable:
                name: i
                span:
                  start: 46
                  end: 47
              iterable:
                ArrayLiteral:
                  elements:
                    - Literal:
                        - Number: 0
                        - start: 52
                          end: 53
                    - Literal:
                        - Number: 1
                        - start: 55
                          end: 56
                    - Literal:
                        - Number: 2
                        - start: 58
                          end: 59
                    - Literal:
                        - Number: 3
                        - start: 61
                          end: 62
                    - Literal:
                        - Number: 4
                        - start: 64
                          end: 65
                  span:
                    start: 51
                    end: 66
              body:
                statements:
                  - FunctionDecl:
                      name:
                        name: log
                        span:
                          start: 88
                          end: 91
                      type_params: []
                      params:
                        - name:
                            name: x
                            span:
                              start: 92
                              end: 93
                          type_ref:
                            Named:
                              - number
                              - start: 95
                                end: 101
                          ownership: ~
                          span:
                            start: 92
                            end: 101
                      return_type:
                        Named:
                          - void
                          - start: 106
                            end: 110
                      return_ownership: ~
                      predicate: ~
                      body:
                        statements:
                          - Expr:
                              expr:
                                Call:
                                  callee:
                                    Identifier:
                                      name: print
                                      span:
                                        start: 133
                                        end: 138
                                  args:
                                    - Call:
                                        callee:
                                          Identifier:
                                            name: str
                                            span:
                                              start: 139
                                              end: 142
                                        args:
                                          - Identifier:
                                              name: x
                                              span:
                                                start: 143
                                                end: 144
                                        span:
                                          start: 139
                                          end: 145
                                  span:
                                    start: 133
                                    end: 146
                              span:
                                start: 133
                                end: 147
                        tail_expr: ~
                        span:
                          start: 111
                          end: 165
                      span:
                        start: 85
                        end: 165
                  - Expr:
                      expr:
                        Call:
                          callee:
                            Identifier:
                              name: log
                              span:
                                start: 182
                                end: 185
                          args:
                            - Identifier:
                                name: i
                                span:
                                  start: 186
                                  end: 187
                          span:
                            start: 182
                            end: 188
                      span:
                        start: 182
                        end: 189
                tail_expr: ~
                span:
                  start: 67
                  end: 203
              span:
                start: 42
                end: 203
        tail_expr: ~
        span:
          start: 28
          end: 213
      span:
        start: 9
        end: 213
