crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_errors__parse_nested_function_in_function.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_errors.rs
expression: program
---
items:
  - Function:
      name:
        name: outer
        span:
          start: 12
          end: 17
          file: "<input>"
      type_params: []
      params: []
      return_type:
        Named:
          - number
          - start: 23
            end: 29
            file: "<input>"
      return_ownership: ~
      predicate: ~
      body:
        statements:
          - FunctionDecl:
              name:
                name: helper
                span:
                  start: 47
                  end: 53
                  file: "<input>"
              type_params: []
              params:
                - name:
                    name: x
                    span:
                      start: 54
                      end: 55
                      file: "<input>"
                  type_ref:
                    Named:
                      - number
                      - start: 57
                        end: 63
                        file: "<input>"
                  ownership: ~
                  span:
                    start: 54
                    end: 63
                    file: "<input>"
              return_type:
                Named:
                  - number
                  - start: 68
                    end: 74
                    file: "<input>"
              return_ownership: ~
              predicate: ~
              body:
                statements:
                  - Return:
                      value:
                        Binary:
                          op: Mul
                          left:
                            Identifier:
                              name: x
                              span:
                                start: 100
                                end: 101
                                file: "<input>"
                          right:
                            Literal:
                              - Number: 2
                              - start: 104
                                end: 105
                                file: "<input>"
                          span:
                            start: 100
                            end: 105
                            file: "<input>"
                      span:
                        start: 93
                        end: 106
                        file: "<input>"
                tail_expr: ~
                span:
                  start: 75
                  end: 120
                  file: "<input>"
              span:
                start: 44
                end: 120
                file: "<input>"
          - Return:
              value:
                Call:
                  callee:
                    Identifier:
                      name: helper
                      span:
                        start: 140
                        end: 146
                        file: "<input>"
                  args:
                    - Literal:
                        - Number: 21
                        - start: 147
                          end: 149
                          file: "<input>"
                  span:
                    start: 140
                    end: 150
                    file: "<input>"
              span:
                start: 133
                end: 151
                file: "<input>"
        tail_expr: ~
        span:
          start: 30
          end: 161
          file: "<input>"
      span:
        start: 9
        end: 161
        file: "<input>"
