crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_errors__parse_nested_function_with_type_params.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_errors.rs
expression: program
---
items:
  - Function:
      name:
        name: outer
        span:
          start: 12
          end: 17
          file: "<input>"
      attributes: []
      is_async: false
      type_params:
        - name: T
          trait_bounds: []
          span:
            start: 18
            end: 19
            file: "<input>"
      params: []
      return_type:
        Named:
          - void
          - start: 26
            end: 30
            file: "<input>"
      return_ownership: ~
      predicate: ~
      body:
        statements:
          - FunctionDecl:
              name:
                name: inner
                span:
                  start: 48
                  end: 53
                  file: "<input>"
              attributes: []
              is_async: false
              type_params:
                - name: E
                  trait_bounds: []
                  span:
                    start: 54
                    end: 55
                    file: "<input>"
              params:
                - name:
                    name: x
                    span:
                      start: 64
                      end: 65
                      file: "<input>"
                  type_ref:
                    Named:
                      - E
                      - start: 67
                        end: 68
                        file: "<input>"
                  ownership: Borrow
                  mutable: false
                  span:
                    start: 57
                    end: 68
                    file: "<input>"
              return_type:
                Named:
                  - E
                  - start: 73
                    end: 74
                    file: "<input>"
              return_ownership: ~
              predicate: ~
              body:
                statements:
                  - Return:
                      value:
                        Identifier:
                          name: x
                          span:
                            start: 100
                            end: 101
                            file: "<input>"
                      span:
                        start: 93
                        end: 102
                        file: "<input>"
                tail_expr: ~
                span:
                  start: 75
                  end: 116
                  file: "<input>"
              span:
                start: 45
                end: 116
                file: "<input>"
        tail_expr: ~
        span:
          start: 31
          end: 126
          file: "<input>"
      span:
        start: 9
        end: 126
        file: "<input>"
